# pyjschema

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: __init__.py  dump.py  load.py  string.py  validate.py
src/pyjschema/: __init__.py  load.py  number.py  string.py  validate.py
src/pyjschema/string/: __init__.py  formatter.py
tests/unit/: load.py  test_array.py  test_composition.py  test_load.py  test_number.py  test_object.py  test_refs.py  test_string.py
